# SnJake_Sapsan-VFI

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  sapsan_vfi_nodes.py
.github/workflows/: publish.yml
Exampe Workflow/: Example Workflow.json
Example Workflow/: Example Workflow.json
training_code/: README.md  config.yaml  requirements.txt
training_code/scripts/: build_manifest.py  cache_triplets.py  cache_wds.py  convert_to_safetensors.py  prepare_dataset.py
training_code/src/: dataset.py  diagnose.py  infer.py  train.py
training_code/src/models/: __init__.py  modules.py  vfi_model.py
training_code/src/utils/: checkpoint.py  ema.py  logging.py  losses.py  misc.py  schedulers.py  video_backend.py
