[project]
name = "snjake_sapsan-vfi"
description = "SnJake Sapsan-VFI is a custom ComfyUI node for x2 video frame interpolation. It inserts one in-between frame for every input pair, doubling the FPS."
version = "1.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["pyyaml", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/SnJake/SnJake_Sapsan-VFI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SnJake/SnJake_Sapsan-VFI/wiki"
"Bug Tracker" = "https://github.com/SnJake/SnJake_Sapsan-VFI/issues"

[tool.comfy]
PublisherId = "snjake"
DisplayName = "SnJake_Sapsan-VFI"
Icon = ""
includes = [] 
requires-comfyui = ">=1.0.0"  # ComfyUI version compatibility

